TRIT-59 UI fix for language toggle alignment issue

--- a/app/assets/stylesheets/language-toggles.scss
+++ b/app/assets/stylesheets/language-toggles.scss
@@ -1,6 +1,6 @@
 // Language switcher
 .lang {
-  margin-top: -50px;
+  margin-top: -20px;
 
   &::after {
     content: "";
